fix plus/minus rendering on iOS
due to how iOS devices display buttons and numbers, the interpreted svgs from the imported react icons wouldn't be displayed inside the flexbox.

react icons have been replaced with styled 300wt roboto +/-, which aligns with the page theme better

--- a/client/src/format/DrinkInfo.css
+++ b/client/src/format/DrinkInfo.css
@@ -137,6 +137,8 @@
 .multiplier-plus {
     display: flex;
     overflow: hidden;
+    font-family: Roboto;
+    font-weight: 300;
 }
 
 .multiplier-quantity {
